fix image spacing on render

--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,7 @@ hr.star-primary:after {
 }
 
 .project-image {
-  height: calc(100% - 6.8rem);
+  height: calc(100% - 27.8rem);
   width: 100%;
   object-fit: cover;
   text-align: center;
